Part 4 complete - hit model added

--- a/main_app/templates/players/index.html
+++ b/main_app/templates/players/index.html
@@ -9,7 +9,7 @@
       <div class="card-content">
         <span class="card-title">{{ player.name }}</span>
         <p>Position: {{ player.position }}</p>
-        <p>Jersey Number: {{ player.jersey_number|linebreaks }}</p>
+        <p>Jersey Number: {{ player.jersey_number }}</p>
         <p>Age: {{ player.age }}</p>
       </div>
     </div>
