--- a/main_app/templates/players/detail.html
+++ b/main_app/templates/players/detail.html
@@ -7,13 +7,45 @@
   <div class="card-content">
     <span class="card-title">{{ player.name }}</span>
     <p>Position: {{ player.position }}</p>
-    <p>Jersey Number: {{ player.jersey_number|linebreaks }}</p>
+    <p>Jersey Number: {{ player.jersey_number }}</p>
     <p>Age: {{ player.age }}</p>
   </div>
   <div class="card-action">
     <a href="{% url 'players_update' player.id %}">Edit</a>
     <a href="{% url 'players_delete' player.id %}">Delete</a>
   </div>
+  <div class="col s6">
+    <form action="{% url 'add_hit' player.id %}" method="POST">
+      {% csrf_token %}
+      {{ hit_form.as_p }}
+      <input type="submit" class="btn" value="Add Hit">
+    </form>
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Base</th></tr>
+      </thead>
+      <tbody>
+        {% for hit in player.hit_set.all %}
+          <tr>
+            <td>{{hit.date}}</td>
+            <td>{{hit.get_base_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 </div>
 
+<script>
+  const dateEl = document.getElementById('id_date');
+ 
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+  const selectEl = document.getElementById('id_base');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
